fix div.flash overlapping header problem

--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -11,6 +11,7 @@
   width: 40%;
   max-width: 80%;
   margin: 3px;
+  z-index: -1;
 }
 
 form#new_idea.new_idea div.field div.idea_content div.title {
